fixed spacing on home component

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,17 @@
 @tailwind components;
 @tailwind utilities;
 
+.Home{
+  height: 100vh;
+  background: url('./assets/mtns-at-night.jpeg') no-repeat center/cover;
+
+}
+
+.Home .overlay{
+  height: 100vh;
+  background-color: rgba(0,0,0,0.8);
+}
+
 .project-card {
   @apply flex flex-col justify-center items-center bg-white h-screen font-mono py-40
 }
